ifds/src/tests/verification/snapshots/ifds__tests__verification___fast_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (25) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (26) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (15) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (16) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (17) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (5, 3) { };
\node[font=\tiny] at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] at (3.5, 2.5) {Return([0])};
\node[font=\tiny] at (3.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (0) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (1) at (13, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (2) at (13, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (12, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (12, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (11, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (11, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (10, 5) { };
\node[font=\tiny] at (8.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] at (8.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] at (8.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] at (8.5, 3.5) {Call(1, [2], [0])};
\node[font=\tiny] at (8.5, 4.5) {Call(2, [], [1])};
		\path[->, blue] (15) [loop right] edge  node { } (15);
		\path[->, blue] (15) [bend right] edge  node { } (16);
		\path[->, blue] (15) [bend right] edge  node { } (17);
		\path[->, blue] (15) [bend right] edge  node { } (18);
		\path[->, blue] (15) [bend right] edge  node { } (19);
		\path[->, blue] (15) [bend right] edge  node { } (20);
		\path[->, blue] (25) [loop right] edge  node { } (25);
		\path[->, blue] (25) [bend right] edge  node { } (26);
		\path[->, blue] (9) [bend right] edge  node { } (0);
		\path[->, blue] (9) [bend right] edge  node { } (1);
		\path[->, blue] (9) [bend right] edge  node { } (2);
		\path[->, blue] (9) [bend right] edge  node { } (3);
		\path[->, blue] (9) [bend right] edge  node { } (4);
		\path[->, blue] (9) [bend right] edge  node { } (5);
		\path[->, blue] (9) [bend right] edge  node { } (6);
		\path[->, blue] (9) [bend right] edge  node { } (7);
		\path[->, blue] (9) [bend right] edge  node { } (8);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (9) [bend right] edge  node { } (10);
		\path[->, blue] (9) [bend right] edge  node { } (11);
		\path[->, blue] (9) [bend right] edge  node { } (12);
		\path[->, blue] (9) [bend right] edge  node { } (13);
		\path[->, blue] (9) [bend right] edge  node { } (14);
		\path[->, blue] (21) [loop right] edge  node { } (21);
		\path[->, blue] (21) [bend right] edge  node { } (22);
		\path[->, blue] (21) [bend right] edge  node { } (23);
		\path[->, blue] (21) [bend right] edge  node { } (24);
		\path[->, blue] (27) [loop right] edge  node { } (27);
		\path[->, blue] (27) [bend right] edge  node { } (28);
		\path[->, blue] (27) [bend right] edge  node { } (29);
		\path[->, blue] (27) [bend right] edge  node { } (30);


                \end{tikzpicture}
            \end{document}
