ifds/src/tests/verification/snapshots/ifds__tests__verification___fast_nested_call_global_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (17) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (18) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (22) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (9) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (10) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (6, 2) { };
\node[font=\tiny] at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] at (4.5, 1.5) {Return([0])};
\node[font=\tiny] at (4.5, 1.5) {Return([0])};
\node[font=\tiny] at (4.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (14, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (13, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (12, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (11, 2) { };
\node[font=\tiny] at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (9.5, 1.5) {Return([1])};
\node[font=\tiny] at (9.5, 1.5) {Return([1])};
\node[font=\tiny] at (9.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (9) [bend right] edge  node { } (10);
		\path[->, blue] (9) [bend right] edge  node { } (12);
		\path[->, blue] (9) [bend right] edge  node { } (13);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (11) [loop right] edge  node { } (11);
		\path[->, blue] (6) [bend right] edge  node { } (3);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (6) [bend right] edge  node { } (7);
		\path[->, blue] (6) [bend right] edge  node { } (8);
		\path[->, blue] (14) [loop right] edge  node { } (14);
		\path[->, blue] (14) [bend right] edge  node { } (15);
		\path[->, blue] (14) [bend right] edge  node { } (16);
		\path[->, blue] (23) [bend right] edge  node { } (17);
		\path[->, blue] (23) [bend right] edge  node { } (18);
		\path[->, blue] (23) [bend right] edge  node { } (19);
		\path[->, blue] (23) [bend right] edge  node { } (20);
		\path[->, blue] (23) [bend right] edge  node { } (21);
		\path[->, blue] (23) [bend right] edge  node { } (22);
		\path[->, blue] (23) [loop right] edge  node { } (23);
		\path[->, blue] (23) [bend right] edge  node { } (24);
		\path[->, blue] (23) [bend right] edge  node { } (25);
		\path[->, blue] (23) [bend right] edge  node { } (26);


                \end{tikzpicture}
            \end{document}
